--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "marked": "^9.1.2",
-    "html2canvas": "^1.4.1",
-    "@tailwindcss/typography": "^0.5.10",
-    "tailwindcss": "^3.3.3",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "react-icons": "^4.11.0",
     "@headlessui/react": "^1.7.17",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.1.4",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/marked": "^5.0.1",
+    "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^1.14.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.284.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@types/marked": "^5.0.1"
+    "marked": "^9.1.2",
+    "postcss": "^8.4.31",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
